src-ken&y/objects/Bank_Account__c.object
<CustomObject>
    <customHelpPage>HelpBankAccounts</customHelpPage>
    <description>Bank Account Information</description>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Bank account type</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active account if selected; otherwise inactive</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Offset__c</fullName>
        <description>Balance offset for Bank Reconciliation.</description>
        <label>Balance Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number_2__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description></description>
        <label>DEPRECATED</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_Contact__c</fullName>
        <description>Bank manager or other contact at bank</description>
        <label>Bank Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company associated with this bank account</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account_Unique__c</fullName>
        <label>GL Account Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL account number for posting transactions for this bank account</description>
        <label>GL Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>GL_Account__c.Report_Section__c</field>
                <operation>equals</operation>
                <value>Current Assets</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Bank Accounts</relationshipLabel>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_ACH_Number__c</fullName>
        <defaultValue>0000</defaultValue>
        <description>Next ACH Number to print</description>
        <label>DEPRECATED</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Check_Number_2__c</fullName>
        <description>Next Check Number to Print</description>
        <label>Next Check Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Check_Number__c</fullName>
        <defaultValue>0000</defaultValue>
        <description>Next Check Number to Print</description>
        <label>DEPRECATED</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Wire_Number__c</fullName>
        <defaultValue>0000</defaultValue>
        <description>Next Wire Number to print</description>
        <label>DEPRECATED</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Advice_Lines_Per_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <description>This field controls the number of advice lines to be printed per page on a check stock.</description>
        <label>Number of Advice Lines per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Balance_Date__c</fullName>
        <description>Opening Balance date maintains the Date/Time when the opening balance is actually obtained. All the Source Documents(CR/SP/JEs) will not be considered for reconciliation which were transacted before this date.</description>
        <label>Opening Balance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <description>Opening balance is used for the Bank Reconciliation.</description>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Bank or contact person phone number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Deposit_Payment_Method__c</fullName>
        <description>Primary Deposit Payment Method</description>
        <label>Primary Deposit Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Disbursement_Payment_Method__c</fullName>
        <description>Primary Disbursement payment method</description>
        <label>Primary Disbursement Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <description>Bank routing number</description>
        <label>Routing Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Bank Account Transaction Currency</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Pre_Printed_Check_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates that the customer will be using pre-printed check stock to print checks and advices</description>
        <label>Use Preprinted Check Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yodlee_Account_Linkage_Date__c</fullName>
        <label>Yodlee Account Linkage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yodlee_Account_Name__c</fullName>
        <label>Yodlee Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yodlee_Account_Number__c</fullName>
        <label>Yodlee Account Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Yodlee_Account_Site_ID__c</fullName>
        <label>Yodlee Account Site ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Account_Number_2__c</columns>
        <columns>Routing_Number__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Currency_is_required</fullName>
        <active>true</active>
        <description>Currency is required.</description>
        <errorConditionFormula>IsBlank(Currency__c)</errorConditionFormula>
        <errorDisplayField>Currency__c</errorDisplayField>
        <errorMessage>Currency is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Check_Num_Should_Only_Be_Numeric</fullName>
        <active>true</active>
        <description>allow only blank or numeric values into Next Check number field</description>
        <errorConditionFormula>IF (not(isblank( Next_Check_Number_2__c )), 
NOT(REGEX( Next_Check_Number_2__c , &quot;[0-9]*&quot;)),
NULL)</errorConditionFormula>
        <errorDisplayField>Next_Check_Number_2__c</errorDisplayField>
        <errorMessage>You can enter only a numeric value in the Next Check Number field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_Advice_Lines_is_required</fullName>
        <active>true</active>
        <description>no of advice lines is required for pre printed stock option</description>
        <errorConditionFormula>AND(Use_Pre_Printed_Check_Stock__c == true  ,  OR( ISNULL(Number_of_Advice_Lines_Per_Page__c)  ,Number_of_Advice_Lines_Per_Page__c &lt;= 0)
)</errorConditionFormula>
        <errorDisplayField>Number_of_Advice_Lines_Per_Page__c</errorDisplayField>
        <errorMessage>You must enter a value for the Number of Advice Lines per Page field when the Use Preprinted Check Stock field is selected.</errorMessage>
    </validationRules>
</CustomObject>